--- a/deneme.html
+++ b/deneme.html
@@ -1,27 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html> <!--döküman tipi html5 dosyasını tanımlicak-->
+<html> /
+<head> <!-- baş bölümü genel içerikleri yer alır sitenin tanımı yazılır başlık ikon meta açıklama anahtar sözcükler css ve javascript dosyaları burda tanımlıyoruz-->
 
-    <title>denemebir</title>
-<link rel="shortcut icon" href="images/bayrak.png"/>
-<meta charset="utf-8">
+    <title>denemebir</title> 
+
+    <link rel="shortcut icon" href="images/bayrak.png"/> <!--sayfaya ikon eklenir-->
+
+<meta charset="utf-8"> <!--sitenin dil yapısı belirlenir türkçe siteler yapıcağımız için bizim dil kodlamamız olan utf-8 yazıyoruz-->
+
 <meta name="Description" content="web tasarımı dersleri,
-html css javascript dersleri ">
+html css javascript dersleri "> <!--arama motorunda çıkıcak sonuçlarda gözüken açıklama-->
+
 <meta name="Keywords" content="web tasarım,html dersleri,
-css dersleri">
+css dersleri"> <!--arama motoru tarafında hangi anahtar kelimelerle indexleniceği yazılır-->
 
-<style type="text/css">
+<style type="text/css"> 
 
+p{font-size:25px;} 
 
-</style>
-<script language="javascript">
+</style> <!--css tanımlamak için kullanılır bunun arasına yazıcağımız bütün kodlar css kodları olucaktır -->
+<!-- p font size ile yazının büyüklüğünü ayarladık style içinde-->
+
+<script language="javascript"> 
     alert("merhaba dünya")
-</script>
+</script><!-- head etikeleri arasında script dosyasını tanımlayabiliyoruz dili tanımlıyoruz site açılırken bir javasript ile oluşturulmuş mesaj geliyo-->
 
 </head>
-<body>
+<body> <!--sitenin tamamının yer aldığı bölüm web sitesinin görünümünün ayarlandığı yer resim link yazılar-->
+    
+    <p>merhaba dünya</p> <!-- paragraf tagıdır <p> -->
 
-</body>
+
+    </body>
 
 
 
