--- a/deneme6.html
+++ b/deneme6.html
@@ -8,7 +8,10 @@
 
     <body>
 
-<img src="resimler/13dbcc2101d2793cf9646c06da05b8b1.jpeg" width="150" height="200"></br><!--sayfaya resim ekleyip boyutunu ayarladık-->
-<img src="resimler/istockphoto-517188688-612x612.jpeg" width="150" height="200">
-    </body>
+<img src="resimler/13dbcc2101d2793cf9646c06da05b8b1.jpeg" width="150" height="200" alt="doğa resmi"></br><!--sayfaya resim ekleyip boyutunu ayarladık-->
+<a href="http://google.com"><img src="resimler/istockphoto-517188688-612x612.jpeg" width="150" height="200" alt="doğa resmi" border="5"> </br><!--eklediğim resme etiket tanımladım doğa resmi arandığında sayfanız indexlenicek border etiketiylede resmin çerçevesini oluşturduk 5px olarak ayrıca
+resme tıkladığımızda farklı bir sayfaya yönlendirmek için yani link olarak kullanmak a href tagı kullanılarak yazılır-->
+ <img src="https://cdn1.ntv.com.tr/gorsel/HVnpnKwRKEex4_6utLLnGw.jpg?width=1000&mode=both&scale=both&v=1566294029181" width="150" height="200" alt="doğa resimleri" border="5">
+ <!--başka bir sayfadan resmi sayfaya direk eklemek istersek o sayfanın bağlantı adresini kopylarız ve img src kısmına yapıştırıp getirebiliriz-->  
+</body>
 </html>
