ses ve video ekleme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div style="background-color: red; height: 200px; width: 500px;">
         <h5>Eren kalp Diloş</h5>
         <span>çok mutlu sonsuza kadar</span>
-
+        <SPAN>sen benim herşeyimsin</SPAN>
     </div>
 </body>
 </html>
