--- a/deneme7.html
+++ b/deneme7.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>ses ve video ekleme</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>ses ve video ekleme</title>
+  </head>
+  <body>
+    <audio controls autoplay loop>
+      <!--şarkı bittikten sonra başa sarması için loop özelliği var-->
+      <!--sayfanın açılır açılmaz şarkının açılması için autoplay özelliğini yazıyoruz ama google chrome da desteklemiyo-->
+      <source
+        src="müzik/Kiraz Çiçekleri Official Video  4K  - Gökhan Türkmen.mp3"
+      /></audio
+    ><!--audio ile müzik ekliyoruz oynatıcının kontrollerini göstermesi içinde controls yazıyoruz
+    source yazarakda dosyadan müziği ekliyoruz-->
+
+    <video controls autoplay width="640" height="480">
+      <!--autoplay özelliği ile sayfa açılınca çalışmasını sağladık ama chrome da bu özellik çalışmıyo ayrıca boyutunu ayarladık-->
+      <source
+        src="video/BU SEZONUN EN SAÇMA DİZİSİ - KADER BAĞLARI (Beyin Küçülten İnceleme).mp4"
+      /></video
+    ><!--video ekledik sayfaya-->
+  </body>
 </html>
