açılır kutu select

--- a/deneme11.html
+++ b/deneme11.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <form id="form1" name="form1" method="get">
+      <label for="İl">İl:</label>
       <select name="iller" id="iller" required>
         <!--bir form tanımladık ve select ile birden fazla seçenek sunan açılır bir menü oluşturduk select içinde option okullanarak istanbul, adana,bursa dedik-->
         <option value="Adana">Adana</option>
