--- a/sitesablonu-cssbicim.html
+++ b/sitesablonu-cssbicim.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>css ile div yapısı</title>
-    <link rel="stylesheet" href="css/divyapisi.css">
+    <link rel="stylesheet" href="css/haricibicim.css">
     
     <!--biz div yapısını css ile burada biçimlendirebiliriz ama css'i harici bir dosya olarak oluşturduğumuzda css dosyasını istediğimiz her dosya içerisine import ederek kullanabiliriz
         css içierisinde belirttiğimiz #container{} şkelindeki aslında bir seçicidir ve biz biçimlendirmeyi bu seçiciyle birlikte{} bu parantezin içerinde biçimlendiririz renk büyüklük gibi şeyler ama bazen article gibi makale alanında bir tane makale olmaz bu yüzden article içine id değilde class tanımlarız çünkü birden fazla makale yazılabilir
@@ -15,7 +15,7 @@ margin sitemizin içene açtığımız contiener alanının dış boşluğunu ay
       <nav></nav>
       <section>
         <header id="makale"></header>
-        <article calss="makale"></article>
+        <article class="makale"></article>
         <footer id="makalesonu"></footer>
       </section>
       <aside></aside>
