float etkisini temizleme

--- a/css-div-floatetkisi.html
+++ b/css-div-floatetkisi.html
@@ -45,6 +45,7 @@
       <div class="kutu"></div>
       <div class="kutu"></div>
       <div class="soltemizle"></div>
+      <!--yine ayno sol temizle divini kullanarak istediğim kutudan sonra alt satırdan devam ettirdim-->
       <div class="kutu"></div>
       <div class="kutu"></div>
       <div class="kutu"></div>
