harici font kullanımı

--- a/cssdisplayozelligi.html
+++ b/cssdisplayozelligi.html
@@ -9,9 +9,10 @@
         height: 150px;
         background: blue;
         margin: 5px;
-        display: inline-block; /*display sadece inline dersek sayfada kutular gözükmez çünkü inline özelliği kendi içinde boyutunu ayarlar width height desek bile yinede inline kendi içeriğine göre ayarlar bunun yerine inline-blok diyoruz inline blok yan yana kutuları dizer yada float left özelliği kullnılabilir*/
+        display: table-cell; /*table cell dediğimizde iki kutumuz birleşicek*/
+        /* display: inline-block; /*display sadece inline dersek sayfada kutular gözükmez çünkü inline özelliği kendi içinde boyutunu ayarlar width height desek bile yinede inline kendi içeriğine göre ayarlar bunun yerine inline-blok diyoruz inline blok yan yana kutuları dizer yada float left özelliği kullnılabilir*/
         text-align: center; /*kutunun içinde yazılan yazının ortalanması için text-align center deriz*/
-        vertical-align: middle; /*vertical-align özelliği tablo içindeki verileri dikeyde hizalamaya yarar*/
+        vertical-align: middle; /*vertical-align özelliği tablo içindeki verileri dikeyde hizalamaya yarar vertical align özelliği table cell dediğimiz zaman işe yaricak ve yazımız iki kutunun birleşmiş halinin ortasına hizalanıcak*/
       }
       td {
         vertical-align: bottom;
