css google font ile yeni font ekleme harici font kullanım

--- a/cssfontkullanimi.html
+++ b/cssfontkullanimi.html
@@ -14,7 +14,7 @@
     <!--burada google fonts sayfasından seçtiğim yazı tiplerinin linkini buraya kopyaladık-->
     <!--<style type="text/css">-->
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Old+Uyghur&family=Poppins:ital,wght@1,300;1,500&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Old+Uyghur&family=Poppins:ital,wght@1,300;1,500&display=swap"); /*burada google fontsda bize verilen link halindeki yazı tıipleirini import olarakda kaydedip harici css de kayıtlı tutabiliriz bu şekilde de çalıştırabiliriz*/
 
       div#yazi2 p {
         font-family: "Poppins", sans-serif; /*yukarıda linkini verdiğim yazı tiplerinin yine google fontda alt kısımda font family kodunu kopyaladım buraya yapıştırdım yazı tipi en büyüklüğünü en fazla seçtiğim fontlardaki yazı tipi büyüklüğünü girebilirim mesela seçtiğim yazı tipi büyüklüğü 500 dü en fazla 500 diyebilirim */
