sayfada div içinde yazıların gölgelendirme ve yazı tiplerini şekillerini ayarladık

--- a/css-fontawesome.html
+++ b/css-fontawesome.html
@@ -16,6 +16,6 @@
   <body>
     <i class="fa-brands fa-accessible-icon"></i>
     <i class="fa-brands fa-facebook fa-2xl"></i
-    ><!--bu iconun 2xl boyutu olduğu için 2xl yazarak boyutunu büyüttüm her icon için farklı boyutlar olabilir-->
+    ><!--bu iconun 2xl boyutu olduğu için 2xl yazarak boyutunu büyüttüm her icon için farklı boyutlar olabilir hatta bir ikonun farklı derecelerde olan halleri içinde ayrı bir kodu oluyo yine font awesome da seçtiğimiz ikonun altınadaki koda bakmamız gerek-->
   </body>
 </html>
