css yatay menü oluşturma ve haricimenu ile css içine yazdık

--- a/cssfontbicimgolgeler.html
+++ b/cssfontbicimgolgeler.html
@@ -39,7 +39,7 @@
 
       div.orta p {
         line-height: 30px;/*sayfada p tagı içinde yazdığımız yazı iki satır halindeydi istersek bu satır aralığını line- h*/
-        text-align: left;
+        text-align: left;/*text-align ile left diyerek paragrafın sola hizlanmasını sağladık altta text-indent diyerek 20 px dedik buda paragrafın başının 20px boşluk bırakarak başlamasını sağladık*/
 text-indent: 20px;  
     }
 
